--- a/src/App.css
+++ b/src/App.css
@@ -2,9 +2,20 @@
   text-align: center;
 }
 
-.App-logo {
-  height: 40vmin;
-  pointer-events: none;
+.Logo {
+  width: 100px;
+  background-color: aquamarine;
+  height: 50px;
+}
+
+.Search {
+width: 100ox;
+height: 50px;
+background-color: white;
+border-radius: 20px;
+}
+.Navigation{
+
 }
 
 @media (prefers-reduced-motion: no-preference) {
@@ -13,26 +24,10 @@
   }
 }
 
-.App-header {
-  background-color: #282c34;
-  min-height: 100vh;
+.Header {
+  background-color: salmon;
+  width: 100%;
   display: flex;
-  flex-direction: column;
-  align-items: center;
-  justify-content: center;
-  font-size: calc(10px + 2vmin);
-  color: white;
+  justify-content: space-between;
 }
 
-.App-link {
-  color: #61dafb;
-}
-
-@keyframes App-logo-spin {
-  from {
-    transform: rotate(0deg);
-  }
-  to {
-    transform: rotate(360deg);
-  }
-}
